Bug #6266 Invalid DATETIME value not handled properly
Submitted: 26 Oct 2004 19:21 Modified: 19 Nov 2004 20:42
Reporter: Dean Ellis
Status: Closed
Category:Server Severity:S2 (Serious)
Version:4.1.7 OS:
Assigned to: Dmitri Lenev Target Version:

[26 Oct 2004 19:21] Dean Ellis
Description:
Invalid DATETIME value is not set to zero.  Affects 4.1 forward; all storage engines; not
OS-specific.

How to repeat:
DROP TABLE IF EXISTS t1;
CREATE TABLE t1 ( a DATETIME );
INSERT INTO t1 VALUES ( '11993-09-30 00:00:00' );
SELECT a FROM t1;
DROP TABLE t1;

Suggested fix:
n/a
[19 Nov 2004 20:42] Dmitri Lenev
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

ChangeSet 1.2073.23.1 2004/11/15 15:44:29 dlenev@brandersnatch.localdomain
  Fix for bug #6266 "Invalid DATETIME value is not handled properly".