libmysql/libmysql.c
@@ -3256,11 +3256,12 @@ static void read_binary_time(MYSQL_TIME *tm, uchar **pos)
       tm->hour+= tm->day*24;
       tm->day= 0;
     }
+    tm->time_type= MYSQL_TIMESTAMP_TIME;
+
     *pos+= length;
   }
   else
-    set_zero_time(tm);
-  tm->time_type= MYSQL_TIMESTAMP_TIME;
+    set_zero_time(tm, MYSQL_TIMESTAMP_TIME);
 }
 
 static void read_binary_datetime(MYSQL_TIME *tm, uchar **pos)
@@ -3285,12 +3286,12 @@ static void read_binary_datetime(MYSQL_TIME *tm, uchar **pos)
     else
       tm->hour= tm->minute= tm->second= 0;
     tm->second_part= (length > 7) ? (ulong) sint4korr(to+7) : 0;
+    tm->time_type= MYSQL_TIMESTAMP_DATETIME;
 
     *pos+= length;
   }
   else
-    set_zero_time(tm);
-  tm->time_type= MYSQL_TIMESTAMP_DATETIME;
+    set_zero_time(tm, MYSQL_TIMESTAMP_DATETIME);
 }
 
 static void read_binary_date(MYSQL_TIME *tm, uchar **pos)
@@ -3307,12 +3308,12 @@ static void read_binary_date(MYSQL_TIME *tm, uchar **pos)
     tm->hour= tm->minute= tm->second= 0;
     tm->second_part= 0;
     tm->neg= 0;
+    tm->time_type= MYSQL_TIMESTAMP_DATE;
 
     *pos+= length;
   }
   else
-    set_zero_time(tm);
-  tm->time_type= MYSQL_TIMESTAMP_DATE;
+    set_zero_time(tm, MYSQL_TIMESTAMP_DATE);
 }
 
 
